Dart service page UI fix on mobile

--- a/styles/sass/tier.scss
+++ b/styles/sass/tier.scss
@@ -170,5 +170,12 @@
             padding: 30px 40px;
             height: auto;
         }
+        .tier__bottom {
+            .tier__points {
+                .tier__point {
+                    width: 70%;
+                }
+            }
+        }
     }
 }
